--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,32 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - uses: pnpm/action-setup@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
 
-      - name: Install
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm build
+      # Bouw alleen de website (Vite), niet de server (esbuild)
+      - name: Build website
+        run: pnpm run build:site
 
-      - name: Debug dist folders
+      # Controle: je moet hier dist/index.html en dist/assets zien
+      - name: Debug dist output
         run: |
-          echo "== root =="
-          ls -la
-          echo "== client =="
-          ls -la client || true
-          echo "== client/dist =="
-          ls -la client/dist || true
           echo "== dist =="
           ls -la dist || true
+          echo "== dist/assets =="
+          ls -la dist/assets || true
 
-      - name: Deploy
+      - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
