--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,6 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: studiotussendelijnen.nl/
-          local-dir: dist/
+          server-dir: public_html/
+          local-dir: dist/public/
           dangerous-clean-slate: true
